# wifigateway-server

./: .gitignore  README.md  common.pri  configure  configure.ac  controller.cpp  controller.h  controllerdbusadaptor.cpp  controllerdbusadaptor.h  dbus.h  ec_simple.h  files.h  files.h.in  gateway.cpp  gateway.h  gateway.pro  gatewaycoreapplication.cpp  gatewaycoreapplication.h  gw_add_host.sh  gw_functions.sh  gw_init.sh  gw_remove_host.sh  handle_signals.c  handle_signals.h  logger.cpp  logger.h  main.cpp  quotabeacon.cpp  quotabeacon.h  session.cpp  session.h  sessionexport.h  wifigateway-server.pro  wifigateway.pro
conf/: dnsmasq.conf  hostapd.conf
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm  prerm.ex  rules  watch.ex  wifigateway-server.cron.d.ex  wifigateway-server.default.ex  wifigateway-server.doc-base.EX  wifigateway-server.substvars
docs/: .~lock.gateway-spec.odt#  gateway-spec.odt  plan.md  state-diagram.dia
filewatcher/: common.pri  filewatcher.cpp  filewatcher.h  filewatcher.pro
runcommand/: runcommand.cpp  runcommand.h  runcommand.pro
script/: gw_add_host.sh  gw_console.php  gw_fifo_if.sh  gw_functions.sh  gw_init.sh  gw_remove_host.sh  test.sh
web/: gw-evt.js  gw.php  gw_admin_panel.html  gw_endpoint.php  gw_logging.php  gw_login.html  gw_session_panel.html  gw_session_start.html  gw_test_endpoint.php  index.html  js  style
(+55 files in other folders)
